# aoc-2023

./: Cargo.toml  flake.nix
2023/: Cargo.toml
2023/src/: brick.rs  card.rs  crucible.rs  cube.rs  dig.rs  energizer.rs  expansion.rs  gear.rs  hail.rs  hike.rs  library.rs  main.rs  map.rs  mirror.rs  mirrorb.rs  pipe.rs  prediction.rs  pulse.rs  race.rs  reflector.rs  scratchcards.rs  seed.rs  solve.rs  spring.rs  step.rs  trebuchet.rs  wiring.rs  workflow.rs
