[package]
name = "template"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
derivative.workspace = true
field_accessor.workspace = true
num-integer.workspace = true
regex.workspace = true
petgraph.workspace = true
rand.workspace = true
common = { path = "../common" }
utils = { path = "../utils" }
